--- a/scripts/conf/lamp/apache2.conf
+++ b/scripts/conf/lamp/apache2.conf
@@ -16,9 +16,9 @@
 # Configuração da variável de Nome do Servidor Apache2 para responder
 # por nome 
 ServerName localhost
-ServerName 172.16.1.20
-ServerName ptispo01ws01
-ServerName ptispo01ws01.pti.intra
+ServerName 192.168.0.3
+ServerName autsrv0001
+ServerName autsrv0001.autlog.net
 #
 # O nome do arquivo a ser procurado em cada diretório para diretivas de 
 # configuração adicionais. Veja também AllowOverride diretiva.
