--- a/scripts/conf/lamp/awstats.pti.intra.conf
+++ b/scripts/conf/lamp/awstats.pti.intra.conf
@@ -29,10 +29,10 @@ LogFormat=4
 LogSeparator=" "
 #
 # Configuração do Nome de Domínio do Site (utilizando Virtual Host do Apache2)
-SiteDomain="pti.intra"
+SiteDomain="autlog.net"
 #
 # Configuração dos Endereços de acesso ao Site padrão do Apache2
-HostAliases="pti.intra www.pti.intra localhost 127.0.0.1 172.16.1.20"
+HostAliases="autlog.net www.autlog.net localhost 127.0.0.1 192.168.0.3"
 #
 # Bloco de configuração padrão do AWStats (deixar o padrão), alterar somente se
 # for necessário para as customizações dos relatórios do AWStats.
