--- a/scripts/conf/lamp/autlog-net.conf
+++ b/scripts/conf/lamp/autlog-net.conf
@@ -15,9 +15,9 @@
 <VirtualHost *:80>
 	#
 	# Nome da solicitação do virtual host
-	ServerName pti.intra
-	ServerAlias www.pti.intra
-	ServerAlias ptispo01ws01.pti.intra
+	ServerName autlog.net
+	ServerAlias www.autlog.net
+	ServerAlias autsrv0001.autlog.net
 	#
 	# Email do administrador do virtual host
 	ServerAdmin webmaster@localhost
@@ -30,7 +30,7 @@
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	#
 	# Subdiretório das configurações do virtual host
-	<Directory /var/www/html/pti.intra/>
+	<Directory /var/www/html/autlog.net/>
 		AllowOverride None
 		Require all granted
 	</Directory>
