--- a/scripts/conf/lamp/default-ssl.conf
+++ b/scripts/conf/lamp/default-ssl.conf
@@ -18,14 +18,14 @@
 	<VirtualHost _default_:443>
 		#
 		# Configuração do Nome de Domínio e dos Apelidos do Apache2
-		ServerName pti.intra
-		ServerAlias 172.16.1.20
-  		ServerAlias ptispo01ws01
-		ServerAlias ptispo01ws01.pti.intra
-		ServerAlias www.pti.intra
+		ServerName autlog.net
+		ServerAlias 192.168.0.3
+  		ServerAlias autsrv0001
+		ServerAlias autsrv0001.autlog.net
+		ServerAlias www.autlog.net
 		#
 		# Email do administrador do Apache2
-		ServerAdmin webmaster@pti.intra
+		ServerAdmin webmaster@autlog.net
 		#
 		# Pasta raiz da hospedagem dos sites do Apache2
 		DocumentRoot /var/www/html
