--- a/scripts/conf/lamp/000-default.conf
+++ b/scripts/conf/lamp/000-default.conf
@@ -15,7 +15,7 @@
 <VirtualHost *:80>
 	#
 	# Email do administrador do Apache2
-	ServerAdmin webmaster@autlog.net
+	ServerAdmin ricardo.hagio@autlog.com.br
 	#
 	# Diretório raiz da hospedagem de sites no Apache2
 	DocumentRoot /var/www/html
